--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,7 @@
 @import "../sections/Testimonials";
 @import "../sections/Footer";
 @import "../pages/Minesweeper";
+@import "../pages/ConnectFour";
 
 body{
     background-color: $dark-background;
