--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 *,
-*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -331,7 +330,7 @@ body:has(.burger-menu.open) {
   letter-spacing: 0.2px;
   font-family: "Graphik-Medium";
   font-weight: 500;
-  background-color: #4452fe;
+  background-color: #0112db;
   color: #fff;
   border: none;
   padding: 20px 40px;
@@ -340,7 +339,7 @@ body:has(.burger-menu.open) {
   cursor: pointer;
 }
 .hero .buttons .try-btn:hover {
-  background-color: #9098fe;
+  background-color: #2b3bfe;
 }
 .hero .buttons .learn-btn {
   padding: 10px;
@@ -363,7 +362,7 @@ body:has(.burger-menu.open) {
 .hero .banner-background {
   width: 100%;
   height: 993px;
-  background-color: #4452fe;
+  background-color: #0112db;
   position: relative;
 }
 .hero .banner-background::after {
@@ -661,7 +660,7 @@ body:has(.burger-menu.open) {
   letter-spacing: 0.2px;
   font-family: "Graphik-Medium";
   font-weight: 500;
-  background-color: #4452fe;
+  background-color: #0112db;
   color: #fff;
   border: none;
   padding: 14px 46px;
@@ -671,7 +670,7 @@ body:has(.burger-menu.open) {
   margin-bottom: 30px;
 }
 .contents .content-cards .card .btn:hover {
-  background-color: #9098fe;
+  background-color: #2b3bfe;
 }
 .contents .content-cards .card img {
   filter: drop-shadow(0 4px 31px rgba(0, 0, 0, 0.15));
@@ -985,50 +984,443 @@ footer.footer .right-part .social a {
   border: 1px solid #999;
 }
 
-.connect-four .field {
+.connect-four {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.connect-four .top-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 55px;
+  padding: 0 20px;
+  position: relative;
+}
+.connect-four .top-bar .left-part {
+  position: absolute;
+  left: 20px;
+}
+.connect-four .top-bar .left-part .exit-btn {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.connect-four .top-bar .left-part .exit-btn:hover {
+  background-color: #e77681;
+}
+.connect-four .top-bar .mid-part {
+  display: flex;
+  gap: 20px;
+}
+.connect-four .top-bar .right-part {
+  position: absolute;
+  right: 20px;
+}
+.connect-four .top-bar .right-part .restart-btn {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #112d57;
+  color: #fff;
+  border: none;
+  padding: 10px 46px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.connect-four .top-bar .right-part .restart-btn:hover {
+  background-color: #1e4e97;
+}
+.connect-four .field-main {
+  position: relative;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.connect-four .field-main .field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+  border-radius: 5%;
+}
+.connect-four .field-main .field .row {
+  display: flex;
+}
+.connect-four .field-main .field .row .cell {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+}
+.connect-four .field-main .field .row .cell::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 112.5px;
+  height: 112.5px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 0 0 0 200px #232930;
+  transform: translate(-50%, -50%);
+  background: var(--after-color, transparent);
+}
+.connect-four .field-main .field .row .cell.hovered-col::after {
+  box-shadow: 0 0 0 200px #272d35;
+}
+.connect-four .field-main .field-with-checkers {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.connect-four .field .row {
+.connect-four .field-main .field-with-checkers .row {
   display: flex;
 }
-.connect-four .field .row .cell {
+.connect-four .field-main .field-with-checkers .row .cell {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   overflow: hidden;
 }
-.connect-four .field .row .cell::after {
+.connect-four .field-main .field-with-checkers .row .cell.last-checker::before {
   content: "";
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 150px; /* діаметр кола */
-  height: 150px; /* діаметр кола */
-  background-color: transparent; /* прозорий колір */
+  width: 19.5px;
+  height: 19.5px;
   border-radius: 50%;
-  box-shadow: 0 0 0 200px #232930; /* створює враження, що квадрат залишився навколо */
+  transform: translate(-50%, -50%);
+  background: #e6e6e6;
+  z-index: 1;
+}
+.connect-four .field-main .field-with-checkers .row .cell::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 112.5px;
+  height: 112.5px;
+  border-radius: 50%;
   transform: translate(-50%, -50%);
   background: var(--after-color, transparent);
 }
-.connect-four .field .row .cell.hovered-col::after {
-  box-shadow: 0 0 0 200px rgba(35, 41, 48, 0.6980392157);
-}
-.connect-four .field .row .cell.hovered-by-player-1::after {
+.connect-four .field-main .field-with-checkers .row .cell.hovered-by-player-1::after {
   background-color: rgba(var(--player-color-1), 0.4);
 }
-.connect-four .field .row .cell.hovered-by-player-2::after {
+.connect-four .field-main .field-with-checkers .row .cell.hovered-by-player-2::after {
   background-color: rgba(var(--player-color-2), 0.4);
 }
-.connect-four .field .row .cell.active-by-player-1::after {
+.connect-four .field-main .field-with-checkers .row .cell.active-by-player-1::after {
   background-color: rgb(var(--player-color-1));
 }
-.connect-four .field .row .cell.active-by-player-2::after {
+.connect-four .field-main .field-with-checkers .row .cell.active-by-player-2::after {
   background-color: rgb(var(--player-color-2));
+}
+.connect-four .field-main .field-with-checkers .row .cell.falling {
+  animation: fallAnimation 0.5s ease-out forwards;
+}
+.connect-four .pop-up {
+  position: fixed;
+  width: 500px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #181818;
+  border-radius: 5%;
+  border: 1px solid #323232;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+.connect-four .pop-up .content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 30px;
+  align-items: center;
+  padding: 8% 20px 20px 20px;
+}
+.connect-four .pop-up .content .heading {
+  padding: 10px;
+  font-size: 52px;
+  line-height: 62px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+}
+.connect-four .pop-up .content .control-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.connect-four .pop-up .content .control-buttons .leave-btn,
+.connect-four .pop-up .content .control-buttons .restart-btn,
+.connect-four .pop-up .content .control-buttons .back-btn {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #112d57;
+  color: #fff;
+  border: none;
+  padding: 14px 46px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.connect-four .pop-up .content .control-buttons .leave-btn:hover,
+.connect-four .pop-up .content .control-buttons .restart-btn:hover,
+.connect-four .pop-up .content .control-buttons .back-btn:hover {
+  background-color: #1e4e97;
+}
+.connect-four .pop-up .content .winner-checker {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+}
+.connect-four .pop-up .content .winner-checker.falling {
+  animation: fallAnimation 0.5s ease-out forwards;
+}
+.connect-four .pop-up .content .winner-checker::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 112.5px;
+  height: 112.5px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background: rgb(var(--winner-color, transparent));
+}
+@keyframes fallAnimation {
+  0% {
+    transform: translateY(-100vh); /* Початкове положення за межами екрана */
+  }
+  70% {
+    transform: translateY(0); /* Фішка падає в клітинку */
+  }
+  90% {
+    transform: translateY(-7px); /* Фішка трохи відскакує вгору */
+  }
+  100% {
+    transform: translateY(0); /* Фішка остаточно зупиняється в клітинці */
+  }
+}
+
+.connect-four-start-menu {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #f2f2f2;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  color: #fff;
+}
+.connect-four-start-menu .menu-header {
+  margin-bottom: 20px;
+}
+.connect-four-start-menu .menu-header h1 {
+  text-align: center;
+  padding: 10px;
+  font-size: 52px;
+  line-height: 62px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+  font-size: 36px;
+  color: #0112db;
+}
+.connect-four-start-menu .menu-section {
+  margin-bottom: 20px;
+}
+.connect-four-start-menu .menu-section h2 {
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+  color: #e6e6e6;
+  margin-bottom: 10px;
+}
+.connect-four-start-menu .menu-section .game-modes button,
+.connect-four-start-menu .menu-section .menu-actions button {
+  display: inline-block;
+  margin: 5px 10px;
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #0112db;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.connect-four-start-menu .menu-section .game-modes button:hover,
+.connect-four-start-menu .menu-section .menu-actions button:hover {
+  background-color: #2b3bfe;
+}
+.connect-four-start-menu .menu-section .game-modes {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.connect-four-start-menu .menu-section .game-modes button:hover {
+  background: #2b3bfe;
+}
+.connect-four-start-menu .menu-section .game-modes button.active {
+  background: #28a745;
+}
+.connect-four-start-menu .player-settings {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+.connect-four-start-menu .player-settings .player {
+  background: #fff;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  padding: 10px;
+}
+.connect-four-start-menu .player-settings .player label {
+  display: block;
+  margin-bottom: 10px;
+  color: #000;
+}
+.connect-four-start-menu .player-settings .player label:last-child {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin: 0;
+}
+.connect-four-start-menu .player-settings .player label input[type=text] {
+  width: 100%;
+  padding: 8px;
+  padding: 10px;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+}
+.connect-four-start-menu .player-settings .player label input[type=color] {
+  width: 50px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+}
+.connect-four-start-menu .menu-actions {
+  display: flex;
+  justify-content: space-around;
+}
+.connect-four-start-menu .menu-actions .start-button {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.connect-four-start-menu .menu-actions .start-button:hover {
+  background-color: #48d368;
+}
+.connect-four-start-menu .menu-actions .exit-button {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.connect-four-start-menu .menu-actions .exit-button:hover {
+  background-color: #e77681;
+}
+.connect-four-start-menu .menu-actions button {
+  padding: 10px 20px;
+}
+.connect-four-start-menu .menu-actions button:hover {
+  opacity: 0.9;
+}
+
+.error-message {
+  color: #dc3545;
+  font-size: 14px;
+  margin-top: 5px;
+}
+.error-message.general-error {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 body {
   background-color: #181818;
+}
+
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }/*# sourceMappingURL=App.css.map */
