--- a/src/styles/_Base.scss
+++ b/src/styles/_Base.scss
@@ -134,15 +134,17 @@
   }
 }
 
-$primary: #4452fe;
+$primary:  darken(#4452fe,20);
 $secondary: #112d57;
 $first-text: #000;
 $light-text: #fff;
+$confirm-text:#28a745;
+$deny-text:#dc3545;
 $second-text: #5c5c5c;
 $dark-background: #181818;
 $light-background: #fff;
 
-*,
+
 *,
 *::before,
 *::after {
