--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1023,11 +1023,58 @@ footer.footer .right-part .social a {
 }
 .connect-four .top-bar .mid-part {
   display: flex;
+  gap: 35px;
+  align-items: center;
+}
+.connect-four .top-bar .mid-part .player-1-timers,
+.connect-four .top-bar .mid-part .player-2-timers {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  display: flex;
   gap: 20px;
+}
+.connect-four .top-bar .mid-part .player-1-timers div:not(.number-timer):after,
+.connect-four .top-bar .mid-part .player-2-timers div:not(.number-timer):after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 50%;
+  z-index: -1;
+}
+.connect-four .top-bar .mid-part .player-1-timers > div:last-child::after {
+  background-color: rgb(var(--player-color-1));
+}
+.connect-four .top-bar .mid-part .player-2-timers > div:first-child::after {
+  background-color: rgb(var(--player-color-2));
 }
 .connect-four .top-bar .right-part {
   position: absolute;
   right: 20px;
+  gap: 20px;
+  display: flex;
+}
+.connect-four .top-bar .right-part .pause-btn {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #1e7e34;
+  color: #fff;
+  border: none;
+  padding: 10px 46px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.connect-four .top-bar .right-part .pause-btn:hover {
+  background-color: #2dbc4e;
 }
 .connect-four .top-bar .right-part .restart-btn {
   padding: 10px;
@@ -1236,6 +1283,125 @@ footer.footer .right-part .social a {
   100% {
     transform: translateY(0); /* Фішка остаточно зупиняється в клітинці */
   }
+}
+
+.pick-first-player {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 30px;
+  align-items: center;
+  padding: 8% 20px 20px 20px;
+}
+.pick-first-player .heading {
+  padding: 10px;
+  font-size: 52px;
+  line-height: 62px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+}
+
+body {
+  -webkit-perspective: 800px;
+}
+
+h1 {
+  text-align: center;
+}
+
+#coin {
+  position: relative;
+  margin: 50px auto;
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  perspective: 1000px;
+}
+
+#coin div {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3), 0 12px 20px -10px rgba(0, 0, 0, 0.4);
+}
+
+.side-a {
+  background-color: #bb0000;
+}
+
+.side-b {
+  background-color: #3e3e3e;
+  transform: rotateY(-180deg);
+}
+
+#coin {
+  transform-style: preserve-3d;
+  transition: transform 1s ease-in;
+}
+
+#coin div {
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.side-a {
+  z-index: 100;
+}
+
+#coin.heads {
+  animation: flipHeads 3s ease-out forwards, shadowAnimation 3s ease-out;
+}
+
+#coin.tails {
+  animation: flipTails 3s ease-out forwards, shadowAnimation 3s ease-out;
+}
+
+@keyframes flipHeads {
+  from {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(900deg) scale(1.2);
+  }
+  to {
+    transform: rotateY(1800deg) scale(1);
+  }
+}
+@keyframes flipTails {
+  from {
+    transform: rotateY(0);
+  }
+  50% {
+    transform: rotateY(990deg) scale(1.2);
+  }
+  to {
+    transform: rotateY(1980deg) scale(1);
+  }
+}
+@keyframes shadowAnimation {
+  from {
+    box-shadow: 0 12px 20px -10px rgba(0, 0, 0, 0.4);
+  }
+  50% {
+    box-shadow: 0 16px 30px -10px rgba(0, 0, 0, 0.6);
+  }
+  to {
+    box-shadow: 0 12px 20px -10px rgba(0, 0, 0, 0.4);
+  }
+}
+@keyframes shine {
+  0%, 100% {
+    background: radial-gradient(circle at 20% 20%, rgba(255, 255, 255, 0.5), transparent 80%);
+  }
+  50% {
+    background: radial-gradient(circle at 80% 80%, rgba(255, 255, 255, 0.8), transparent 80%);
+  }
+}
+#coin div {
+  animation: shine 3s infinite;
 }
 
 .connect-four-start-menu {
