--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -971,19 +971,214 @@ footer.footer .right-part .social a {
   }
 }
 
-#field .row {
+.minesweeper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  color: #fff;
+  border-radius: 5%;
+}
+.minesweeper .flag-count {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+.minesweeper #field {
+  display: flex;
+  flex-direction: column;
+  background-color: #252525;
+  border-radius: 2%;
+  padding: 10px;
+  overflow: hidden;
+}
+.minesweeper #field .row:first-child .cell:first-child {
+  border-radius: 30% 0 0 0;
+}
+.minesweeper #field .row:last-child .cell:first-child {
+  border-radius: 0 0 0 30%;
+}
+.minesweeper #field .row:first-child .cell:last-child {
+  border-radius: 0 30% 0 0;
+}
+.minesweeper #field .row:last-child .cell:last-child {
+  border-radius: 0 0 30% 0;
+}
+.minesweeper .row {
   display: flex;
 }
-#field .row .cell {
-  width: 24px !important;
-  height: 24px !important;
+.minesweeper .cell {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #272e36;
+  background-color: #232930;
+  font-size: 1.5em;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+.minesweeper .cell:hover {
+  background-color: #39424d;
+  border: 1px solid #4e5b6b;
+}
+.minesweeper .cell.revealed {
+  background-color: #2e363f;
+  border: 1px solid #252c33;
+}
+.minesweeper .cell.bomb {
+  position: relative;
+  animation: explode 0.5s forwards;
+}
+.minesweeper .cell.bombs-around-1 {
+  color: #2a71d0;
+}
+.minesweeper .cell.bombs-around-2 {
+  color: #3a9d23;
+}
+.minesweeper .cell.bombs-around-3 {
+  color: #d02a2a;
+}
+.minesweeper .cell.bombs-around-4 {
+  color: #872ca8;
+}
+.minesweeper .cell.bombs-around-5 {
+  color: #a85c2c;
+}
+.minesweeper .cell.bombs-around-6 {
+  color: #2ca899;
+}
+.minesweeper .cell.bombs-around-7 {
+  color: #4c4c9d;
+}
+.minesweeper .cell.bombs-around-8 {
+  color: #cfca34;
+}
+.minesweeper .pop-up {
+  position: fixed;
+  width: 500px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #181818;
+  border-radius: 5%;
+  border: 1px solid #323232;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  z-index: 10;
+}
+.minesweeper .pop-up .content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 30px;
+  align-items: center;
+  padding: 8% 20px 20px 20px;
+}
+.minesweeper .pop-up .content .heading {
+  padding: 10px;
+  font-size: 52px;
+  line-height: 62px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+}
+.minesweeper .pop-up .content .control-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.minesweeper .pop-up .content .control-buttons .leave-btn,
+.minesweeper .pop-up .content .control-buttons .restart-btn,
+.minesweeper .pop-up .content .control-buttons .back-btn {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #112d57;
+  color: #fff;
+  border: none;
+  padding: 14px 46px;
   text-align: center;
-  border: 1px solid #999;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.minesweeper .pop-up .content .control-buttons .leave-btn:hover,
+.minesweeper .pop-up .content .control-buttons .restart-btn:hover,
+.minesweeper .pop-up .content .control-buttons .back-btn:hover {
+  background-color: #1e4e97;
+}
+.minesweeper .pop-up .content .bomb-example > div {
+  position: relative;
+  animation: explode 0.5s forwards;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #272e36;
+  background-color: #232930;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
+@keyframes explode {
+  0% {
+    transform: scale(1);
+    background-color: #232930;
+    opacity: 1;
+    box-shadow: none;
+  }
+  20% {
+    transform: scale(1.2);
+    background-color: yellow;
+    opacity: 1;
+    box-shadow: 0 0 10px yellow;
+  }
+  40% {
+    transform: scale(1.5);
+    background-color: orange;
+    opacity: 0.9;
+    box-shadow: 0 0 20px orange;
+  }
+  60% {
+    transform: scale(1.8);
+    background-color: red;
+    opacity: 0.7;
+    box-shadow: 0 0 30px red;
+  }
+  80% {
+    transform: scale(2);
+    background-color: darkred;
+    opacity: 0.4;
+    box-shadow: 0 0 40px darkred;
+  }
+  100% {
+    transform: scale(2.5);
+    background-color: transparent;
+    opacity: 0;
+    box-shadow: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+    pointer-events: none;
+  }
+}
 .connect-four {
   display: flex;
   flex-direction: column;
@@ -1562,6 +1757,110 @@ h1 {
   padding: 10px 20px;
 }
 .connect-four-start-menu .menu-actions button:hover {
+  opacity: 0.9;
+}
+
+.error-message {
+  color: #dc3545;
+  font-size: 14px;
+  margin-top: 5px;
+}
+.error-message.general-error {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.minesweeper-start-menu {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #f2f2f2;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  color: #fff;
+}
+.minesweeper-start-menu .menu-header {
+  margin-bottom: 20px;
+}
+.minesweeper-start-menu .menu-header h1 {
+  text-align: center;
+  padding: 10px;
+  font-size: 52px;
+  line-height: 62px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+  font-size: 36px;
+  color: #0112db;
+}
+.minesweeper-start-menu .menu-section {
+  margin-bottom: 20px;
+}
+.minesweeper-start-menu .menu-section h2 {
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik";
+  font-weight: 400;
+  color: #e6e6e6;
+  margin-bottom: 10px;
+}
+.minesweeper-start-menu .menu-section .difficulty-slider {
+  display: flex;
+  flex-direction: column;
+}
+.minesweeper-start-menu .menu-section .difficulty-slider .game-info {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+.minesweeper-start-menu .menu-actions {
+  display: flex;
+  justify-content: space-around;
+}
+.minesweeper-start-menu .menu-actions .start-button {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.minesweeper-start-menu .menu-actions .start-button:hover {
+  background-color: #48d368;
+}
+.minesweeper-start-menu .menu-actions .exit-button {
+  padding: 10px;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  font-family: "Graphik-Medium";
+  font-weight: 500;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.minesweeper-start-menu .menu-actions .exit-button:hover {
+  background-color: #e77681;
+}
+.minesweeper-start-menu .menu-actions button {
+  padding: 10px 20px;
+}
+.minesweeper-start-menu .menu-actions button:hover {
   opacity: 0.9;
 }
 
