--- a/src/sections/_MinesweeperStartMenu.scss
+++ b/src/sections/_MinesweeperStartMenu.scss
@@ -33,7 +33,8 @@
       .game-info {
         display: flex;
         justify-content: space-between;
-        margin-top: 15px;
+        margin-top: 20px;
+        margin-bottom: 10px;
       }
     }
   }
