--- a/src/pages/_ConnectFour.scss
+++ b/src/pages/_ConnectFour.scss
@@ -1,12 +1,15 @@
+// Змінні
 $cellSize: 130px;
 $falling-duration: 0.5s;
 $bounce-height: 7px;
 
+// Стилі для десктопної версії
 .connect-four {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+
   .top-bar {
     display: flex;
     justify-content: center;
@@ -15,9 +18,11 @@ $bounce-height: 7px;
     height: 55px;
     padding: 0 20px;
     position: relative;
+
     .left-part {
       position: absolute;
       left: 20px;
+
       .exit-btn {
         @include for-button(
           $bg-color: $deny-text,
@@ -26,16 +31,19 @@ $bounce-height: 7px;
         );
       }
     }
+
     .mid-part {
       display: flex;
       gap: 35px;
       align-items: center;
+
       .player-1-timers,
       .player-2-timers {
         user-select: none;
-        display:  flex;
-        gap:20px;
-        div:not(.number-timer):after {
+        display: flex;
+        gap: 20px;
+
+        div:not(.number-timer)::after {
           content: "";
           width: 100%;
           height: 100%;
@@ -47,25 +55,32 @@ $bounce-height: 7px;
           z-index: -1;
         }
       }
+
       .player-1-timers > div:last-child {
         &::after {
           background-color: rgb(var(--player-color-1));
         }
       }
+
       .player-2-timers > div:first-child {
         &::after {
           background-color: rgb(var(--player-color-2));
         }
       }
     }
+
     .right-part {
       position: absolute;
       right: 20px;
-      gap:20px;
+      gap: 20px;
       display: flex;
-      .pause-btn{
-        @include for-button($bg-color: darken($confirm-text, 10), $padding: 10px 46px);
-        &.paused{
+
+      .pause-btn {
+        @include for-button(
+          $bg-color: darken($confirm-text, 10),
+          $padding: 10px 46px
+        );
+        &.paused {
           background-color: $deny-text;
         }
       }
@@ -74,7 +89,64 @@ $bounce-height: 7px;
         @include for-button($bg-color: $secondary, $padding: 10px 46px);
       }
     }
+    @include for-size(not-mobile) {
+      &.mobile {
+        display: none;
+      }
+      .picker {
+        display: none;
+      }
+    }
+    @include for-size(mobile) {
+      &.mobile {
+        display: flex;
+        justify-content: space-between;
+        gap: 2px;
+      }
+      .exit-btn {
+        @include for-button(
+          $bg-color: $deny-text,
+          $text-color: $light-text,
+          $padding: 10px 20px
+        );
+      }
+      .restart-btn {
+        @include for-button($bg-color: $secondary, $padding: 10px 46px);
+      }
+      .pause-btn {
+        @include for-button(
+          $bg-color: darken($confirm-text, 10),
+          $padding: 10px 46px
+        );
+        &.paused {
+          background-color: $deny-text;
+        }
+      }
+      &:not(.mobile) .exit-btn,
+      &:not(.mobile) .restart-btn,
+      &:not(.mobile) .pause-btn {
+        display: none;
+      }
+      &.mobile .exit-btn,
+      &.mobile .restart-btn,
+      &.mobile .pause-btn {
+        text-align: center;
+        padding-left: 0;
+        padding-right: 0;
+        display: flex;
+        max-width: 200px;
+        width: 33%;
+        justify-content: center;
+        font-size: 14px;
+      }
+      .mid-part {
+        gap: 0;
+        justify-content: space-between;
+        width: 100%;
+      }
+    }
   }
+
   .field-main {
     position: relative;
     width: fit-content;
@@ -87,6 +159,7 @@ $bounce-height: 7px;
       flex-direction: column;
       overflow: hidden;
       border-radius: 5%;
+
       .row {
         display: flex;
 
@@ -137,6 +210,7 @@ $bounce-height: 7px;
           width: $cellSize;
           height: $cellSize;
           overflow: hidden;
+
           &.last-checker::before {
             content: "";
             position: absolute;
@@ -149,6 +223,7 @@ $bounce-height: 7px;
             background: darken($light-background, 10);
             z-index: 1;
           }
+
           &::after {
             content: "";
             position: absolute;
@@ -162,10 +237,10 @@ $bounce-height: 7px;
           }
 
           &.hovered-by-player-1::after {
-            background-color: #{"rgba(var(--player-color-1), 0.4)"};
+            background-color: rgba(var(--player-color-1), 0.4);
           }
           &.hovered-by-player-2::after {
-            background-color: #{"rgba(var(--player-color-2), 0.4)"};
+            background-color: rgba(var(--player-color-2), 0.4);
           }
           &.active-by-player-1::after {
             background-color: rgb(var(--player-color-1));
@@ -174,7 +249,7 @@ $bounce-height: 7px;
             background-color: rgb(var(--player-color-2));
           }
 
-          // Додаємо анімацію падіння
+          // Анімація падіння
           &.falling {
             animation: fallAnimation $falling-duration ease-out forwards;
           }
@@ -182,8 +257,9 @@ $bounce-height: 7px;
       }
     }
   }
+
   .pop-up {
-    position: fixed;
+    position: absolute;
     width: 500px;
     top: 50%;
     left: 50%;
@@ -193,6 +269,7 @@ $bounce-height: 7px;
     border: 1px solid lighten($dark-background, 10);
     transition: opacity 0.3s ease, transform 0.3s ease;
     z-index: 10;
+
     .content {
       width: 100%;
       height: 100%;
@@ -202,28 +279,34 @@ $bounce-height: 7px;
       gap: 30px;
       align-items: center;
       padding: 8% 20px 20px 20px;
+
       .heading {
         @include for-text(second-headline);
       }
+
       .control-buttons {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
         gap: 20px;
+
         .leave-btn,
         .restart-btn,
         .back-btn {
           @include for-button($bg-color: $secondary, $padding: 14px 46px);
         }
       }
+
       .winner-checker {
         position: relative;
         width: $cellSize;
         height: $cellSize;
         overflow: hidden;
+
         &.falling {
           animation: fallAnimation $falling-duration ease-out forwards;
         }
+
         &::after {
           content: "";
           position: absolute;
@@ -238,24 +321,23 @@ $bounce-height: 7px;
       }
     }
   }
+
   // Анімація падіння фішки з пружинистим відскоком
   @keyframes fallAnimation {
     0% {
-      transform: translateY(-100vh); /* Початкове положення за межами екрана */
+      transform: translateY(-100vh);
     }
     70% {
-      transform: translateY(0); /* Фішка падає в клітинку */
+      transform: translateY(0);
     }
     90% {
-      transform: translateY(-$bounce-height); /* Фішка трохи відскакує вгору */
+      transform: translateY(-$bounce-height);
     }
     100% {
-      transform: translateY(0); /* Фішка остаточно зупиняється в клітинці */
+      transform: translateY(0);
     }
   }
 }
-
-
 
 .pick-first-player {
   width: 100%;
@@ -266,17 +348,20 @@ $bounce-height: 7px;
   gap: 30px;
   align-items: center;
   padding: 8% 20px 20px 20px;
+
   .heading {
     @include for-text(second-headline);
   }
 }
-body {
 
+body {
   perspective: 800px;
 }
-h1{
+
+h1 {
   text-align: center;
 }
+
 #coin {
   position: relative;
   margin: 50px auto;
@@ -284,17 +369,21 @@ h1{
   height: 100px;
   cursor: pointer;
   perspective: 1000px;
-}
 
-#coin div {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3), 0 12px 20px -10px rgba(0, 0, 0, 0.4);
+  div {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3),
+      0 12px 20px -10px rgba(0, 0, 0, 0.4);
+    position: absolute;
+    backface-visibility: hidden;
+  }
 }
 
 .side-a {
   background-color: rgb(var(--player-color-1));
+  z-index: 100;
 }
 
 .side-b {
@@ -307,15 +396,6 @@ h1{
   transition: transform 1s ease-in;
 }
 
-#coin div {
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.side-a {
-  z-index: 100;
-}
-
 #coin.heads {
   animation: flipHeads 3s ease-out forwards;
 }
@@ -324,25 +404,33 @@ h1{
   animation: flipTails 3s ease-out forwards;
 }
 
-
-
 @keyframes flipHeads {
-  from { transform: rotateY(0); -moz-transform: rotateY(0); transform: rotateY(0); }
-  to { transform: rotateY(1800deg); -moz-transform: rotateY(1800deg); transform: rotateY(1800deg); }
+  from {
+    transform: rotateY(0);
+  }
+  to {
+    transform: rotateY(1800deg);
+  }
 }
+
 @keyframes flipTails {
-  from { transform: rotateY(0); -moz-transform: rotateY(0); transform: rotateY(0); }
-  to { transform: rotateY(1980deg); -moz-transform: rotateY(1980deg); transform: rotateY(1980deg); }
+  from {
+    transform: rotateY(0);
+  }
+  to {
+    transform: rotateY(1980deg);
+  }
 }
 
 .pause {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   gap: 22.5px;
   z-index: 1;
+
   &::before,
   &::after {
     content: "";
@@ -350,5 +438,60 @@ h1{
     height: 90px;
     background-color: $light-background;
     display: block;
+  }
+}
+
+@media (max-width: 600px) {
+  $mobileCellSize: calc((100vw - 20px) / var(--row-length));
+
+  .connect-four {
+    .field-main {
+      .field {
+        .row {
+          .cell {
+            width: $mobileCellSize;
+            height: $mobileCellSize;
+
+            &::after {
+              width: calc($mobileCellSize * 0.75);
+              height: calc($mobileCellSize * 0.75);
+            }
+          }
+        }
+      }
+
+      .field-with-checkers {
+        .row {
+          .cell {
+            width: $mobileCellSize;
+            height: $mobileCellSize;
+
+            &.last-checker::before {
+              width: calc($mobileCellSize * 0.13);
+              height: calc($mobileCellSize * 0.13);
+            }
+
+            &::after {
+              width: calc($mobileCellSize * 0.75);
+              height: calc($mobileCellSize * 0.75);
+            }
+          }
+        }
+      }
+    }
+
+    .pop-up {
+      .content {
+        .winner-checker {
+          width: $mobileCellSize;
+          height: $mobileCellSize;
+
+          &::after {
+            width: calc($mobileCellSize * 0.75);
+            height: calc($mobileCellSize * 0.75);
+          }
+        }
+      }
+    }
   }
 }
