--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,6 +11,7 @@
 @import "../pages/ConnectFour";
 @import "../sections/ContentFourStartMenu";
 @import "../sections/MinesweeperStartMenu";
+@import "../pages/Games";
 
 body {
   background-color: $dark-background;
