--- a/src/pages/_ConnectFour.scss
+++ b/src/pages/_ConnectFour.scss
@@ -1,15 +1,14 @@
-// Змінні
+
 $cellSize: 130px;
 $falling-duration: 0.5s;
 $bounce-height: 7px;
 
-// Стилі для десктопної версії
 .connect-four {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-
+  margin-bottom: 40px;
   .top-bar {
     display: flex;
     justify-content: center;
@@ -249,7 +248,6 @@ $bounce-height: 7px;
             background-color: rgb(var(--player-color-2));
           }
 
-          // Анімація падіння
           &.falling {
             animation: fallAnimation $falling-duration ease-out forwards;
           }
@@ -322,7 +320,6 @@ $bounce-height: 7px;
     }
   }
 
-  // Анімація падіння фішки з пружинистим відскоком
   @keyframes fallAnimation {
     0% {
       transform: translateY(-100vh);
